<resources>
    <string name="title">南瓜马车</string>

    <string name="starttime">00:00:00</string>

    <string name="biketitle">用车</string>
    <string name="activitytitle">活动</string>
    <string name="tickettitle">购票</string>

    <string name="app_name">PGNGMCAndroid</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="category_video">    视频    </string>

    <string name="category_essay_joke">    段子    </string>

    <string name="zhuye_yonghu">13581905786</string>

    <string name="zhuye_shezhi">设置</string>

    <string name="zhuye_tuichu">退出</string>

    <string name="zhuye_yongche">用车</string>

    <string name="zhuye_kaisuo">正在开锁请稍候</string>

    <string name="wode_qianbao">我的钱包</string>
    <string name="wode_xingcheng">我的行程</string>
    <string name="wode_youhui">我的优惠</string>
    <string name="yaoqing_haoyou">邀请好友</string>
    <string name="yonghu_zhinan">用户指南</string>
    <string name="guanyu_women">关于我们</string>

    <string name="menu_settings">Settings</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

</resources>
