<RelativeLayout android:id="@+id/main_layout"
    android:background="@color/activity_bg_color"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@+id/title_bar" style="@style/main_title_bar_style">
        <FrameLayout android:id="@+id/top_head_container"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">
            <ImageView android:layout_gravity="center_vertical"
                android:id="@+id/top_head"
                android:contentDescription="@string/app_name"
                android:background="@drawable/bg_head"
                android:src="@mipmap/default_round_head"
                android:padding="2.0dip"
                android:layout_width="@dimen/head_size"
                android:layout_height="@dimen/head_size"
                android:scaleType="fitXY" />
        </FrameLayout>
        <ImageView android:gravity="center"
            android:id="@+id/top_more"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="12.0dip"
            android:src="@drawable/right_drawer"
            android:scaleType="centerInside"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
        <RelativeLayout android:id="@+id/title_click_layout"
            android:paddingLeft="13.0dip"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true">
            <FrameLayout android:id="@+id/title_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/title_recent"
                    android:contentDescription="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="18.0dip"
                    android:textColor="#ffffff"
                    />
            </FrameLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout android:id="@+id/category_layout"
        android:background="@drawable/bg_category_bar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_category_height"
        android:layout_below="@id/title_bar" >


        <LinearLayout
            android:layout_height="@dimen/top_category_height"
            android:layout_width="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            >

            <com.pg.ngmc.pgngmcandroid.view.CategoryTabStrip
                android:id="@+id/category_strip"
                android:paddingLeft="6.0dip"
                android:paddingRight="6.0dip"
                android:clipToPadding="false"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/top_category_height" />
        </LinearLayout>
    </RelativeLayout>
    <android.support.v4.view.ViewPager android:id="@+id/view_pager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/category_layout" />

    <LinearLayout
        android:id="@+id/zuoce"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="invisible"
        android:background="@android:color/transparent"
        >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="fill_parent"
            android:background="#FFAA22"
            >

            <RelativeLayout
                android:id="@+id/yonghu1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                >
                <ImageView
                    android:id="@+id/yonghutouxiang_yuan"
                    android:layout_marginLeft="24dip"
                    android:layout_alignParentLeft="true"
                    android:layout_height="55dip"
                    android:layout_width="55dip"
                    android:background="@mipmap/yonghutouxiang_yuan"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/yonghutouxiang_yuan"
                    android:layout_marginLeft="24dip"
                    android:layout_centerVertical="true"
                    android:text="@string/zhuye_yonghu"
                    android:textSize="17sp"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
                <ImageView
                    android:id="@+id/jiahao"
                    android:layout_marginRight="24dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_height="25dip"
                    android:layout_width="25dip"
                    android:background="@mipmap/jiahao"
                    />
            </RelativeLayout>

            <ImageView
                android:id="@+id/xian1"
                android:layout_below="@id/yonghu1"
                android:layout_marginTop="10dip"
                android:layout_marginRight="24dip"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="24dip"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@mipmap/xian"
                />

            <ListView
                android:id="@+id/listview"
                android:layout_below="@id/xian1"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="40dip"
                android:layout_marginRight="24dip"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="24dip"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                >

            </ListView>

            <ImageView
                android:id="@+id/xian4"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="40dip"
                android:layout_marginRight="24dip"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="24dip"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@mipmap/xian"
                />

            <LinearLayout
                android:id="@+id/dibulan"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="24dip"
                android:layout_marginBottom="10dip"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="24dip"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                >
                <TextView
                    android:id="@+id/zhuyeshezhi"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/zhuye_shezhi"
                    android:textSize="17sp"
                    android:textColor="#d3d3d3"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/zhuyetuichu"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/zhuye_tuichu"
                    android:textSize="17sp"
                    android:textColor="#d3d3d3"
                    android:gravity="center"
                    />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/zuocetouming"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            >
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
